--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
         ctx.font = `${size}px sans-serif`; // フォントサイズ＝見た目の大きさ
         ctx.textAlign = "center";
         ctx.textBaseline = "middle";
-        ctx.fillText("◆", screenX, canvas.height / 2);
+        ctx.fillText("階", screenX, canvas.height / 2);
         /*ctx.beginPath();
         ctx.fillStyle = "lime";
         ctx.arc(screenX, canvas.height / 2, size, 0, Math.PI * 2);
