--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         margin: 0;
         background: black;
         overflow: hidden;
+        touch-action: none;
       }
       canvas {
         display: block;
