--- a/index.html
+++ b/index.html
@@ -1019,7 +1019,7 @@
   // 🎮 ゲームオーバー時のリスタート
   if (isGameOver) location.reload();
 
-}, { passive: true });
+}, { passive: false });
     
 
     
@@ -1061,7 +1061,7 @@
     rotate(-0.2);
     touchStartX = touchX;
   }
-}, { passive: true });
+}, { passive: false });
 
 const TAP_THRESHOLD = 10;
 
