--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
  
   <canvas id="gameCanvas"></canvas>
   <script>
-  
+  document.body.addEventListener("touchmove", function(e) {
+  e.preventDefault();
+}, { passive: false });
   //
   const canvas = document.getElementById('gameCanvas');
   const ctx = canvas.getContext('2d');
