--- a/index.html
+++ b/index.html
@@ -1020,7 +1020,7 @@
   // 🎮 ゲームオーバー時のリスタート
   if (isGameOver) location.reload();
 
-}, { passive: false });
+}, { passive: true });
     
 
     
@@ -1062,7 +1062,7 @@
     rotate(-0.2);
     touchStartX = touchX;
   }
-}, { passive: false });
+}, { passive: true });
 
 const TAP_THRESHOLD = 10;
 
