--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 }, { passive: false }); // 👈 これが超重要！*/
 
  const zombieImage = new Image();
-    zombieImage.src = "img/Zombie.png";
+    zombieImage.src = "Zombie.png";
   
   
   let player = {
