--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 }, { passive: false }); // 👈 これが超重要！*/
 
   const zombieImage = new Image();
-    zombieImage.src = "img/Zombie.png";
+    zombieImage.src = "Zombie.png";
     
   const punchImage = new Image();
-    punchImage.src = "img/Punch.png";
+    punchImage.src = "Punch.png";
   
   
   let player = {
