--- a/index.html
+++ b/index.html
@@ -915,9 +915,9 @@
   
     const normalized = normalizeAngle(angleToEnemy - angle);
     if (normalized < 0) {
-      ctx.fillText("◀️", 80, canvas.height / 2);
+      ctx.fillText("＜＜＜", 80, canvas.height / 2);
     } else {
-      ctx.fillText("▶️", canvas.width - 80, canvas.height / 2);
+      ctx.fillText("＞＞＞", canvas.width - 80, canvas.height / 2);
     }
   
     ctx.restore();
