--- a/index.html
+++ b/index.html
@@ -910,14 +910,14 @@
   
     ctx.save();
     ctx.fillStyle = "red";
-    ctx.font = "60px sans-serif";
+    ctx.font = "180px sans-serif";
     ctx.textAlign = "center";
   
     const normalized = normalizeAngle(angleToEnemy - angle);
     if (normalized < 0) {
-      ctx.fillText("＜＜＜", 80, canvas.height / 2);
+      ctx.fillText("＜＜", 80, canvas.height / 2);
     } else {
-      ctx.fillText("＞＞＞", canvas.width - 80, canvas.height / 2);
+      ctx.fillText("＞＞", canvas.width - 80, canvas.height / 2);
     }
   
     ctx.restore();
